k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    nginx.org/websocket-services: "fast-api-app-service"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 80
          - path: /strapi
            pathType: Prefix
            backend:
              service:
                name: strapi-cms-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
    - host: comp.localhost
      http:
        paths:
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 80
          - path: /strapi
            pathType: Prefix
            backend:
              service:
                name: strapi-cms-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
