k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  annotations:
    nginx.org/websocket-services: "fast-api-app-service"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - splat.top
      secretName: tls-secret
  rules:
    - host: splat.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 5000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: fast-api-app-service
                port:
                  number: 8001
